2009-10-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-ftp.el (tramp-ftp-file-name-handler): Disable
	`file-name-handler-alist' when loading 'ange-ftp.  Otherwise,
	there could be recursive loading when `default-directory' is a
	remote file name.  (Bug#4614)

2009-10-03  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-basic-setup): Handle the case where
	the frame is wide.
	(calendar-generate-window): Test for shrinkability rather than width.

	* cedet/semantic/db-find.el (data-debug-insert-tag-list): Comment out
	declaration, currently false.

	* mail/rmail.el (rmail-generate-viewer-buffer): Be more careful about
	reusing existing buffers, in case we happen to visit two files with the
	same basename.  (Bug#4593)

2009-10-02  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (update-subdirs-CMD): Add cedet to
	$(WINS_SUBDIR).
	(WINS_CEDET_SUBDIRS): List of subdirectories of cedet.
	(bootstrap-clean-CMD, bootstrap-clean-SH): Remove *.elc files in
	subdirs of cedet as well.
	(AUTOGENEL): Add loaddefs.el files in cedet subdirectories.

2009-10-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eldoc.el (eldoc-get-fnsym-args-string):
	Obey advertised-signature-table.

	* help-fns.el (help-function-arglist): Don't check
	advertised-signature-table.
	(describe-function-1): Do it here instead so it also applies to subrs.

2009-10-02  Michael Albinus  <michael.albinus@gmx.de>

	* simple.el (start-file-process): Say in the doc-string, that file
	handlers might not support pty association, if PROGRAM is nil.

	* net/ange-ftp.el (ange-ftp-generate-passwd-key): Check, whether
	HOST and USER are strings.  They are nil, when there are
	incomplete entries in ~/.netrc, for example.
	(ange-ftp-delete-directory): Implement RECURSIVE case.  Change to
	root directory ("device busy" error otherwise).

	* net/tramp-smb.el (tramp-smb-handle-make-directory-internal):
	Flush file properties of created directory.
